--- a/mkspx/mkspx.html
+++ b/mkspx/mkspx.html
@@ -11,9 +11,9 @@
   <script src="js/vct.js"></script>
   <script src="js/mkspx.js"></script>
   <script src="js/draw.js"></script>
+  <script src="js/mouse3d.js"></script>
   <script src="js/util.js"></script>
   <script src="js/mat.js"></script>
-  <script src="js/mouse3d.js"></script>
   <script src="js/pdbdraw.js"></script>
   <style>
     textarea {
@@ -34,7 +34,7 @@
     <div class="col-xs-3">
       <label for="rotate">Rotation angle (&deg;):</label>
       <input type="range" size="3" value="15.0" id="rotate_slider"
-        min="0.1" max="30.0" step="0.1" class="form-control"
+        min="0" max="50.0" step="0.1" class="form-control"
         onchange="mapchange('rotate_slider', 'rotate')">
       <input type="text" size="3" value="15.0" id="rotate"
         class="form-control"
@@ -44,7 +44,7 @@
     <div class="col-xs-3">
       <label for="swing">Crumpling angle (&deg;):</label>
       <input type="range" size="3" value="50.0" id="swing_slider"
-        min="0.1" max="90.0" step="0.1" class="form-control"
+        min="0" max="90.0" step="0.1" class="form-control"
         onchange="mapchange('swing_slider', 'swing')">
       <input type="text" size="3" value="50.0" id="swing"
         class="form-control"
@@ -54,7 +54,7 @@
     <div class="col-xs-3">
       <label for="rise">Rising angle (&deg;):</label>
       <input type="range" size="3" value="12.0" id="rise_slider"
-        min="0.1" max="40.0" step="0.1" class="form-control"
+        min="0" max="40.0" step="0.1" class="form-control"
         onchange="mapchange('rise_slider', 'rise')">
       <input type="text" size="3" value="12.0" id="rise"
         class="form-control"
@@ -62,19 +62,35 @@
     </div>
 
     <div class="col-xs-3">
-      <label for="caps">Terminal caps:</label>
-      <select id="caps" class="form-control" onchange="mkspx(true)">
+      <label for="n-caps">N-terminal cap:</label>
+      <select id="n-caps" class="form-control" onchange="mkspx(true)">
         <option value="">None</option>
-        <option value="N">N-terminal</option>
-        <option value="C">C-terminal</option>
-        <option value="NC">Both</option>
+        <option value="ACE">CH3-CO-</option>
       </select>
     </div>
 
+    <div class="col-xs-3">
+      <label for="c-caps">C-terminal cap:</label>
+      <select id="c-caps" class="form-control" onchange="mkspx(true)">
+        <option value="">None</option>
+        <option value="NH2">-NH2</option>
+        <option value="NMET">-NH-CH3</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="col-xs-3">
+    <label for="format">Output format</label>
+    <select id="format" class="form-control" onchange="mkspx(true)">
+      <option value="CHARMM">CHARMM</option>
+      <option value="AMBER">AMBER</option>
+    </select>
   </div>
 
   <div class="col-xs-12">
-    <label for="aainput">Amino acid sequence:</label>
+    <label for="aainput" title='e.g. "MET LEU SER..." or "MLS..."'
+      style="border-bottom:1px dotted #808080">
+      One-letter or three-letter amino acid sequence:</label>
     <textarea id="aainput" rows="2" cols="80" class="form-control"
 >MET LEU SER ASP GLU ASP PHE LYS ALA VAL PHE GLY MET THR ARG SER ALA PHE ALA ASN
 LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
@@ -84,6 +100,11 @@ LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
     <input type="button" value="Generate"
       class="btn btn-default" onclick="mkspx(true);">
   </div>
+
+  <span class="col-xs-12"
+    id="info" style="font: 130% Times New Roman,serif; padding: 5px 20px">
+    &nbsp;
+  </span>
 
 </form>
 
@@ -96,15 +117,24 @@ LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
       onclick="paint()"></canvas>
   </div>
 
-  <div class="checkbox" class="col-xs-3">
-    <label><input type="checkbox" id="orthographic"
-      onchange="paint()">Orthographic.</label>
+  <div class="col-xs-4">
+    <label for="scaleinput">Scale:</label>
+    <input type="range" id="scaleinput" value="1.0"
+      min="0.01" step="0.01" max="3.0"
+      style="border: solid 1px #f0f0f0"
+      onchange="paint()">
   </div>
 
-  <div class="col-xs-6">
-  <label for="ballScaleInput">Ball scale:</label>
-  <input type="range" id="ballScaleInput" value="0.7"
-    min="0.01" step="0.01" max="2.0" style="width:400px" onchange="paint()">
+  <div class="col-xs-4">
+    <label for="ballScaleInput">Ball scale:</label>
+    <input type="range" id="ballScaleInput" value="0.7"
+      min="0.01" step="0.01" max="2.0"
+      style="border: solid 1px #f0f0f0" onchange="paint()">
+  </div>
+
+  <div class="col-xs-4">
+    <label><input type="checkbox" id="orthographic" checked
+      onchange="paint()"> Orthographic.</label>
   </div>
 
 
