--- a/mkspx/mkspx.html
+++ b/mkspx/mkspx.html
@@ -9,11 +9,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 -->
   <script src="js/vct.js"></script>
+  <script src="js/mat.js"></script>
   <script src="js/mkspx.js"></script>
   <script src="js/draw.js"></script>
   <script src="js/mouse3d.js"></script>
-  <script src="js/util.js"></script>
-  <script src="js/mat.js"></script>
   <script src="js/pdbdraw.js"></script>
   <style>
     textarea {
@@ -23,13 +22,25 @@
 </head>
 <body style="width:800px; margin:auto" onload="init()">
 
-<h2 style="text-align:center">
-  Generate a PDB structure from an amino acid sequence
+<h2 style="text-align:center; font-size:170%">
+  Generating extended PDB structures from amino acid sequences
 </h2>
 
 <form style="width:800px; margin:auto;">
-  <div class="form-group">
-    <h4 style="text-align:center">Parameters</h4>
+  <div class="col-xs-12">
+<!--
+    <label for="aainput" title='e.g. "MET LEU SER..." or "MLS..."'
+      style="border-bottom:1px dotted #808080">
+      One-letter or three-letter amino acid sequence:</label>
+-->
+    <label for="aainput">
+      Three-letter or one-letter amino acid sequence
+      (e.g., <tt>MET LEU SER ...</tt> or <tt>MLS...</tt>):</label>
+    <textarea id="aainput" rows="2" cols="80" class="form-control"
+      style="font-size: 90%; font-family: FreeMono, Courier, monospace;"
+>MET LEU SER ASP GLU ASP PHE LYS ALA VAL PHE GLY MET THR ARG SER ALA PHE ALA ASN
+LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
+  </div>
 
     <div class="col-xs-3">
       <label for="rotate">Rotation angle (&deg;):</label>
@@ -61,22 +72,14 @@
         onchange="mapchange('rise', 'rise_slider')">
     </div>
 
-    <div class="col-xs-3">
-      <label for="n-caps">N-terminal cap:</label>
-      <select id="n-caps" class="form-control" onchange="mkspx(true)">
-        <option value="">None</option>
-        <option value="ACE">CH3-CO-</option>
-      </select>
-    </div>
-
-    <div class="col-xs-3">
-      <label for="c-caps">C-terminal cap:</label>
-      <select id="c-caps" class="form-control" onchange="mkspx(true)">
-        <option value="">None</option>
-        <option value="NH2">-NH2</option>
-        <option value="NMET">-NH-CH3</option>
-      </select>
-    </div>
+  <div class="col-xs-3">
+    <label for="boxsize">Cubic box size:</label>
+    <input type="range" size="3" value="0.0" id="boxsize_slider"
+      min="0" max="100.0" step="1.0" class="form-control"
+      onchange="mapchange('boxsize_slider', 'boxsize')">
+    <input type="text" size="1" value="0.0" id="boxsize"
+      class="form-control"
+      onchange="mapchange('boxsize', 'boxsize_slider')">
   </div>
 
   <div class="col-xs-3">
@@ -87,24 +90,28 @@
     </select>
   </div>
 
-  <div class="col-xs-12">
-    <label for="aainput" title='e.g. "MET LEU SER..." or "MLS..."'
-      style="border-bottom:1px dotted #808080">
-      One-letter or three-letter amino acid sequence:</label>
-    <textarea id="aainput" rows="2" cols="80" class="form-control"
->MET LEU SER ASP GLU ASP PHE LYS ALA VAL PHE GLY MET THR ARG SER ALA PHE ALA ASN
-LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
+  <div class="col-xs-3">
+    <label for="n-caps">N-terminal cap:</label>
+    <select id="n-caps" class="form-control" onchange="mkspx(true)">
+      <option value="">None</option>
+      <option value="ACE">CH3-CO-</option>
+    </select>
   </div>
 
-  <div class="col-xs-12">
+  <div class="col-xs-3">
+    <label for="c-caps">C-terminal cap:</label>
+    <select id="c-caps" class="form-control" onchange="mkspx(true)">
+      <option value="">None</option>
+      <option value="NH2">-NH2</option>
+      <option value="NMET">-NH-CH3</option>
+    </select>
+  </div>
+
+  <div class="col-xs-3">
     <input type="button" value="Generate"
-      class="btn btn-default" onclick="mkspx(true);">
+      style="margin-top: 15px; font-size: 130%; font-weight: bold"
+      class="btn btn-primary" onclick="mkspx(true);">
   </div>
-
-  <span class="col-xs-12"
-    id="info" style="font: 130% Times New Roman,serif; padding: 5px 20px">
-    &nbsp;
-  </span>
 
 </form>
 
@@ -112,12 +119,12 @@ LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
 <div id="container">
 
   <div id="simulbox" style="text-align:center">
-    <canvas id="animationbox" width="600" height="600"
-      style="border: 1px solid #cccccc;"
+    <canvas id="animationbox" width="580" height="580"
+      style="border: 1px solid #cccccc; margin: 10px;"
       onclick="paint()"></canvas>
   </div>
 
-  <div class="col-xs-4">
+  <div class="col-xs-5">
     <label for="scaleinput">Scale:</label>
     <input type="range" id="scaleinput" value="1.0"
       min="0.01" step="0.01" max="3.0"
@@ -132,19 +139,26 @@ LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
       style="border: solid 1px #f0f0f0" onchange="paint()">
   </div>
 
-  <div class="col-xs-4">
+  <div class="col-xs-3">
     <label><input type="checkbox" id="orthographic" checked
       onchange="paint()"> Orthographic.</label>
   </div>
 
+  <span class="col-xs-12"
+    id="info" style="font: 130% Times New Roman,serif; margin: 10px 20px">
+    &nbsp;
+  </span>
+
 
 </div>
 
+<div>
   <div class="col-xs-12">
     <label for="pdboutput">Output PDB:</label>
     <textarea id="pdboutput" rows="10" cols="80" class="form-control">
     </textarea>
   </div>
+</div>
 
 </body>
 </html>
