mkspx: add AMBER input file

--- a/mkspx/mkspx.html
+++ b/mkspx/mkspx.html
@@ -95,6 +95,7 @@ LEU PRO LEU TRP LYS GLN GLN ASN LEU LYS LYS GLU LYS GLY LEU PHE</textarea>
     <label for="format">Output format</label>
     <select id="format" class="form-control" onchange="mkspx(true)">
       <option value="CHARMM">CHARMM for psfgen of VMD</option>
+      <option value="AMBER">AMBER for LEaP of AmberTools</option>
       <option value="CHARMM-GMX">CHARMM for gmx2pdb of GROMACS</option>
       <option value="AMBER-GMX">AMBER for gmx2pdb of GROMACS</option>
     </select>
