--- a/ewald/ion.html
+++ b/ewald/ion.html
@@ -10,6 +10,10 @@
   <script src="js/draw.js"></script>
   <script src="js/ion.js"></script>
   <style>
+    body {
+      width: 830px;
+      margin: auto;
+    }
     textarea {
       font-size: 90%;
       font-family: Lucida Console, FreeMono, Courier, monospace;
@@ -32,14 +36,14 @@
     }
   </style>
 </head>
-<body style="width:800px; margin:auto" onload="init()">
+<body>
 
 <h2 style="text-align:center; font-size:170%">
   Electrostatic free energy of an ion in uniform compensating background
 </h2>
 
-<form style="width:820px; margin:auto;">
-  <div class="col-xs-12">
+<form>
+  <div class="col-xs-3">
     <label for="qtot">Total net charge:</label>
     <input type="text" value="1.0" id="qtot" class="form-control" onchange="paint()">
   </div>
@@ -48,9 +52,21 @@
     <label for="kappa">
       <span style="border-bottom: 1px dotted #000000;"
         title="In the Ewald sum method, the electric potential of the screened charge will take the form of erfc(-&kappa;r)/r, the value 0 means the default value. You can use the NAMD configuration box to automatically compute this value (please include 'cutoff' and optionally 'PMETolerance').">
-        Ewald coefficient</span>,
-      <i>&kappa;</i> (&#8491;<sup>&minus;1</sup>):</label>
+        Ewald coef.</span>,
+      <i>&kappa;</i><span id="invl_1"> (&#x212B;<sup>&minus;1</sup>)</span>:</label>
     <input type="text" value="auto" id="kappa" class="form-control" onchange="paint()">
+  </div>
+
+  <div class="col-xs-3">
+    <label for="epsilon" title="Dielectric constant, 78.3 for water at room temperature">
+      <span style="border-bottom: 1px dotted #000000;">
+      Relative permittivity</span>, <i>&epsilon;</i>:</label>
+    <input type="text" value="78.3" id="epsilon" class="form-control" onchange="paint()">
+  </div>
+
+  <div class="col-xs-3">
+    <label for="RBorn">Born radius, <i>R</i><sub>B</sub><span id="l_0"> (&#x212B;)</span>:</label>
+    <input type="text" value="0" id="RBorn" class="form-control" onchange="paint()">
   </div>
 
   <div class="col-xs-3">
@@ -61,7 +77,7 @@
   <div class="col-xs-3">
     <label for="eunit">Unit of energy:</label>
     <select id="eunit" class="form-control" onchange="paint()">
-      <option value="">Gaussian</option>
+      <option value="">Gaussian/Natural</option>
       <option value="kcal/mol" selected>kcal/mol</option>
       <option value="kJ/mol">kJ/mol</option>
       <option value="J">J (SI unit)</option>
@@ -71,10 +87,20 @@
   <div class="col-xs-3">
     <label for="punit">Unit of pressure:</label>
     <select id="punit" class="form-control" onchange="paint()">
-      <option value="">Gaussian</option>
+      <option value="">Gaussian/Natural</option>
       <option value="bar" selected>bar</option>
       <option value="atm">atm</option>
       <option value="Pa">Pa (SI unit)</option>
+    </select>
+  </div>
+
+  <div class="col-xs-3">
+    <label for="lunit">Unit of length:</label>
+    <select id="lunit" class="form-control" onchange="paint()">
+      <option value="">Gaussian/Natural</option>
+      <option value="&#x212B;" selected>&#x212B;</option>
+      <option value="nm">nm</option>
+      <option value="m">meter (SI unit)</option>
     </select>
   </div>
 
@@ -88,7 +114,7 @@
   </div>
 
   <div class="col-xs-3">
-    <label>Vector 1 (&#8491;):</label>
+    <label>Vector 1<span id="l_1"> (&#x212B;)</span>:</label>
   </div>
   <div class="col-xs-3">
     <input type="text" size="3" value="10.0" id="x0" class="form-control" onchange="paint()">
@@ -101,7 +127,7 @@
   </div>
 
   <div class="col-xs-3">
-    <label>Vector 2 (&#8491;):</label>
+    <label>Vector 2<span id="l_2"> (&#x212B;)</span>:</label>
   </div>
   <div class="col-xs-3">
     <input type="text" size="3" value="0.0" id="y0" class="form-control" onchange="paint()">
@@ -114,7 +140,7 @@
   </div>
 
   <div class="col-xs-3">
-    <label>Vector 3 (&#8491;):</label>
+    <label>Vector 3<span id="l_3"> (&#x212B;)</span>:</label>
   </div>
   <div class="col-xs-3">
     <input type="text" size="3" value="0.0" id="z0" class="form-control" onchange="paint()">
@@ -126,32 +152,28 @@
     <input type="text" size="3" value="10.0" id="z2" class="form-control" onchange="paint()">
   </div>
 
-  <div class="col-xs-3">
-    <label for="epsilon" title="Dielectric constant, 78.3 for water at room temperature">
-      <span style="border-bottom: 1px dotted #000000;">
-      Relative permittivity</span>, <i>&epsilon;</i>:</label>
-    <input type="text" value="78.3" id="epsilon" class="form-control" onchange="paint()">
-  </div>
-
-  <div class="col-xs-3">
-    <label for="RBorn">Born radius, <i>R</i><sub>B</sub> (&#8491;):</label>
-    <input type="text" value="0" id="RBorn" class="form-control" onchange="paint()">
-  </div>
-
-  <div class="col-xs-3">
-    <label for="alchDecouple">
-      <span title="Exclude solute-solute interaction"
-        style="border-bottom: 1px dotted #000000">alchDecouple</span> on?</label>
+  <div class="col-xs-4">
+    <label for="alchDecouple"
+      title="Whether the free energy value to correct excludes solute-solute interaction. In NAMD, it means if alchDecouple is turned on."
+      style="border-bottom: 1px dotted #000000">
+      Solute-solvent free energy?</label>
     <input type="checkbox" id="alchDecouple" class="form-control" onchange="paint()">
-    </input>
   </div>
 
-  <div class="col-xs-3">
+  <div class="col-xs-4">
     <label for="hasvcorr"
-      title="Whether the MD package included the volume correction for charged systems. GROMACS has this correction, but NAMD 2.11 may not.">
+      title="Whether the MD package included the volume correction for charged systems. GROMACS has this correction, but NAMD 2.11 may not."
+      style="border-bottom: 1px dotted #000000">
       Has volume correction?</label>
     <input type="checkbox" id="hasvcorr" class="form-control" onchange="paint()">
-    </input>
+  </div>
+
+  <div class="col-xs-4">
+    <label for="hasvreal"
+      title="Whether the real-space sum is extended to several neighboring cells.  Usually no."
+      style="border-bottom: 1px dotted #000000">
+      Extended real-space sum?</label>
+    <input type="checkbox" id="hasvreal" class="form-control" onchange="paint()">
   </div>
 
   <div class="col-xs-6">
@@ -160,7 +182,7 @@
       onclick="readNAMDconf()">
     <textarea id="NAMDconf" rows="12" cols="72" class="form-control"
       style="font-size: 90%; font-family: FreeMono, Courier, monospace;"
-      onchange="readNAMDconf()"></textarea>
+      ></textarea>
   </div>
 
   <div class="col-xs-6">
@@ -169,7 +191,7 @@
       onclick="readPDB()">
     <textarea id="inputPDB" rows="12" cols="72" class="form-control"
       style="font-size: 90%; font-family: FreeMono, Courier, monospace;"
-      onchange="readPDB()"></textarea>
+      ></textarea>
   </div>
 
   <div class="col-xs-12">
@@ -305,6 +327,7 @@
         <td colspan="4" style="text-align: left">
           <a name="pnote">&dagger;</a>
           Assuming <i>&kappa;</i> is inversely proportional to the box side, <i>L</i>.
+          <div id="sinfo"></div>
         </td>
       </tr>
     </table>
@@ -363,10 +386,13 @@
   which includes solute-solute interaction.
   <br>
   To reproduce Table I, set
-  the Ewald coefficient, <i>&kappa;</i>, to 0.32,
+  the Ewald coef., <i>&kappa;</i>, to 0.32,
   the relative permittivity, <i>&epsilon;</i>, to 1.0,
   the Born radius, <i>R</i><sub>Born</sub>, to 0,
-  and turn off &ldquo;alDecouple&rdquo; and &ldquo;Has volume correction.&rdquo;
+  and uncheck &ldquo;Solute-solvent free energy?&rdquo;,
+  and &ldquo;Has volume correction?&rdquo;,
+  but check
+  &ldquo;Extended real-space sum?&rdquo;.
   </li>
   <li>
   G. Hummer, L. R. Pratt, and A. E. Garc&iacute;a,
